<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Is it Christmas?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="testnumber">35</string>
    <string name="days">DAYS</string>
    <string name="until">UNTIL</string>
    <string name="christmas">CHRISTMAS</string>
    <string name="presentDescription">present image</string>

</resources>
